Full stylesheets with some more url to image-url correction.

--- a/app/assets/stylesheets/client/frontend/game.css.scss
+++ b/app/assets/stylesheets/client/frontend/game.css.scss
@@ -124,6 +124,6 @@ p { margin: 0 }
 
 /************************************************************************************/
 // Imports
-//@import "map/map";
-//@import "gui/gui";
+@import "map/map";
+@import "gui/gui";
 
