--- a/app/assets/stylesheets/client/frontend/gui/_icons.css.scss
+++ b/app/assets/stylesheets/client/frontend/gui/_icons.css.scss
@@ -1,4 +1,4 @@
-$icons-texture: url(/images/client/icons.png);
+$icons-texture: image-url('client/icons.png');
 
 .sprite{
   @include texture($icons-texture);
