--- a/app/assets/stylesheets/client/frontend/map/_actiongrid.css.scss
+++ b/app/assets/stylesheets/client/frontend/map/_actiongrid.css.scss
@@ -6,7 +6,7 @@ Description:
 Purpose of the stylesheet follows.
 */
 
-$input-actiongrid: image-url('client/actiongrid.png");
+$input-actiongrid: image-url('client/actiongrid.png');
 $actiongrid-width: 445px;
 $actiongrid-height: 484px;
 
