--- a/app/assets/stylesheets/game.css
+++ b/app/assets/stylesheets/game.css
@@ -8,7 +8,6 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
- *= require_self
  *= require theme/jquery-ui
  *= require client/jquery.jscrollpane
  *= require client/jquery.ui.selectmenu
@@ -16,4 +15,5 @@
  *= require areaselect/imgareaselect-animated
  *= require client/frontend/game
  *= require client/frontend/coreui
+ *= require client/frontend/fonts
  */
