--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,5 +8,12 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
+
+ *= require client/frontend/comingsoon
+ *= require 360-player/360player
+ *= require client/frontend/login
+ *= require client/jquery.jscrollpane
  *= require_self
  */
+
+
