--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,27 @@
 </head>
 <body>
 
-<%= yield %>
+<div id="fb-root"></div>
+<script type="text/javascript">
+  (function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if(d.getElementById(id)) return;
+    js = d.createElement(s);
+    js.id = id;
+    js.src = "//connect.facebook.net/en_GB/all.js#xfbml=1&appId=<%= Facebook::APP_ID %>";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));
+</script>
+
+<div id="comingsoon">
+  <div id="content">
+    <%= render 'devise/sessions/new' %>
+  </div>
+</div>
+
+<script type="text/javascript">
+  initialize();
+</script>
 
 </body>
 </html>
